[gd_scene load_steps=2 format=3 uid="uid://b2ug11gccvw24"]

[ext_resource type="Script" path="res://MutiplayerController.gd" id="1_svy2q"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_svy2q")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 41.0
offset_right = 224.0
offset_bottom = 118.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 43.0
offset_right = 384.0
offset_bottom = 115.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 410.0
offset_top = 43.0
offset_right = 548.0
offset_bottom = 97.0
text = "StartGame"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 132.0
offset_right = 520.0
offset_bottom = 200.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 144.0
offset_right = 180.0
offset_bottom = 212.0
text = "Name"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
